# radautopy

./: LICENSE  README.md  README.md.backup  notes.txt  pyproject.toml  requirements.txt
src/: defaults.py  newsweather.py  radauto.py  standardftp.py  test.json  tests.py
src/radautopy/: radauto.py  radauto.py_bak  radauto_config.py
src/radautopy/runners/: __init__.py  news.py  split_single.py  standard.py  ttwn.py
src/radautopy/utils/: __init__.py  audio.py  baseargs.py  cloud.py  config.py  ftp.py  log_setup.py  mail.py  rss.py  sftp.py  ttwn.py  utilities.py
src/radautopy/utils/config/: __init__.py  config.py  config.py_bak  config_modify.py  replace_fillers.py
src/radftp/: defaults.py  news_weather_funcs.py
src/utils/: __init__.py  audio.py  baseargs.py  cloud.py  cmdlts.py  config.py  ftp.py  log_setup.py  mail.py  radhttp.py  settings.py  utilities.py
